<resources>
    <string name="app_name">TrainTicket</string>
    <string name="train">火车票</string>
    <string name="move">电影</string>
    <string name="happy">段子</string>
    <string name="start_station">请输入出发站</string>
    <string name="end_station">请输入终点站</string>
    <string name="input_time">请输入出发时间</string>
    <string name="search">搜索</string>
    <string name="cannotLocation">无法获取当前位置</string>
    <string name="erro_property">配置文件错误</string>
    <string name="sheshidu">℃</string>
    <string name="beforeday">前一天</string>
    <string name="afterday">后一天</string>
    <string name="yingzuo">硬座: </string>
    <string name="wuzuo">无座</string>
    <string name="yingwo">硬卧</string>
    <string name="douban">豆瓣评分</string>
    <string name="jianjie">简介:</string>
    <string name="actors">影人：</string>
    <string name="juzhao">预告片/剧照</string>
    <string name="shortcomment">短评</string>
    <string name="moviecomment">影评</string>
    <string name="director">导演</string>
    <string name="seeAllShort">查看全部短评</string>
    <string name="seeAllComments">查看全部影评</string>
    <string name="movieComments">影评</string>
    <string name="joking">内涵段子</string>
    <string name="s1">缘起\n我在人群中看到你\n缘灭\n我看见你在人群中</string>


</resources>
