<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus1.trainticket.activities.MainActivity">


    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/vp_viewpager"
        >

    </android.support.v4.view.ViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mian_bule"

        />


    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/tabLayout"
        app:tabMode="fixed"
        app:tabIndicatorHeight="0dp"
        app:tabGravity="fill"
        app:tabTextColor="@color/text_color"
        app:tabSelectedTextColor="@color/mian_bule"
        >

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tb_train"
            android:text="@string/train"
            android:icon="@mipmap/ic_train2"
            />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tb_move"
            android:text="@string/move"
            android:icon="@mipmap/ic_move1"
            />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tb_happy"
            android:text="@string/happy"
            android:icon="@mipmap/ic_happy1"
            />


    </android.support.design.widget.TabLayout>


</LinearLayout>
