<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus1.trainticket.activities.Movie_Details_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:background="@color/mian_bule"
        android:paddingTop="24dp"
        tools:layout_editor_absoluteY="2dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/mian_bule"
            app:expandedTitleMarginEnd="60dp"
            app:expandedTitleMarginStart="50dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="center"
                android:src="@mipmap/ic_back" />

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@mipmap/bg_failed" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_layout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_movie_title"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:text="寻梦环游记"
                android:padding="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_type"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:layout_marginLeft="15dp"
                android:text="2017/喜剧/动画"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_orignalname"
                android:textColor="@color/text_hint"
                android:textSize="12sp"
                android:text="原名：Coco"
                android:layout_marginLeft="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_onShowTime"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="上映时间：2017-11-24"
                android:layout_marginLeft="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_duration"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="片长：105分钟"
                android:layout_marginLeft="15dp"
                />



        </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/text_hint"
                    android:text="@string/douban"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_rating"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="9.8"
                    />

                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_rating"
                        style="@style/Base.Widget.AppCompat.RatingBar.Small"
                        android:stepSize="0.1"
                        android:rating="4.9"
                        />

            </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_jianjie"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="@string/jianjie"
                android:layout_below="@id/ll_layout"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_summary"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
                android:layout_below="@id/tv_jianjie"
                android:paddingTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                />

        </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="@string/actors"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />

           <android.support.v7.widget.RecyclerView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/rv_recyclerview_actorphoto"
               android:layout_marginTop="10dp"
               >


           </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="@string/juzhao"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_recyclerview_photo"
                android:layout_marginTop="20dp"
                >


            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="@string/shortcomment"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_recyclerview_shortcomment"
                >


            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_AllShortComments"
                android:textColor="@color/mian_bule"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/seeAllShort"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_hint"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_hint"
                android:text="@string/moviecomment"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />
            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_recyclerview_moviecomment"
                >


            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_AllComments"
                android:textColor="@color/mian_bule"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/seeAllComments"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_hint"
                android:layout_marginTop="15dp"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
