<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/tv_startTime"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:text="02:17"
            android:gravity="top"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/tv_endTime"
            android:textSize="12sp"
            android:textColor="@color/text_hint"
            android:text="14:26"
            android:gravity="top"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:id="@+id/tv_seet1"
                android:textColor="@color/text_hint"
                android:text="@string/wuzuo"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_wuzyo"
                android:textSize="12sp"
                android:textColor="@color/color_red"
                android:text="有"
                android:visibility="gone"
                />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            >


            <View
                android:id="@+id/view_topline"
                android:layout_width="3dp"
                android:layout_height="4dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/half_bule" />

            <ImageView
                android:id="@+id/iv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_topline"
                android:scaleType="centerCrop"
                android:src="@drawable/view_arrvie" />


            <View
                android:id="@+id/view_line_center"
                android:layout_width="3dp"
                android:layout_height="16dp"
                android:layout_below="@id/iv_from"
                android:layout_marginLeft="3dp"
                android:background="@color/half_bule" />

            <ImageView
                android:id="@+id/iv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_line_center"
                android:scaleType="fitXY"
                android:src="@drawable/view_notarrive" />

            <TextView
                android:id="@+id/tv_startStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/iv_from"
                android:text="西安"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_endStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_startStation"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@id/iv_to"
                android:text="厦门"
                android:textColor="@color/text_hint"
                android:textSize="14sp" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_seet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/yingzuo"
                android:textColor="@color/text_hint"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_yingzuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="有"
                android:visibility="gone"
                android:textColor="@color/color_red"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/tv_banci"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:text="Z152"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/tv_train_duration"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:text="12时9分"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:id="@+id/tv_seet3"
                android:text="@string/yingwo"
                android:textColor="@color/text_hint"
                android:visibility="gone"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_yingwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="有"
                android:textColor="@color/color_red"
                android:visibility="gone"
                android:textSize="12sp" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/tv_train_price"
            android:textColor="@color/color_red"
            android:textSize="16sp"
            android:gravity="center"
            android:drawableLeft="@mipmap/ic_money"
            android:text="148.5起"


            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/yingzuo"
                android:id="@+id/tv_seet4"
                android:textColor="@color/text_hint"
                android:visibility="gone"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_ruanwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="有"
                android:visibility="gone"
                android:textColor="@color/color_red"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>